# fred-elinos

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.sh  burn.sh  clean.sh
fred-lib.app/: .cproject  .elinosproject  .gitignore  .project  ELINOS.sh  Makefile  README  README.md
fred-lib.app/src/: Makefile.elinos  Makefile.fred-linux-client-lib  Makefile.fredspeedtest  Makefile.rtdag  Makefile.runsched
fred-lib.app/src/fred-linux-client-lib/: .gitignore  CMakeLists.txt  README.md  dbg_print.h  fred_lib.c  fred_lib.h  fred_msg.h  fred_parameters.h  fredcpp.h  sum_vec.cpp  user_buff.c  user_buff.h
fred-lib.app/src/fred-linux-client-lib/cmake/: fredConfig.cmake  libfredConfig.cmake.in
fred-lib.app/src/fredspeedtest/: CMakeLists.txt  fredspeedtest.cpp
fred-lib.app/src/rtdag/src/: matmul.h  matrix_mul.clc  opencl.cpp  opencl.h  opencl_matmul.h  opencl_matrix_mul.cpp
fred-lib.app/src/rtdag/test/: dagX.yaml
fred-lib.app/src/runsched/: CMakeLists.txt  runsched.cpp
fred-lib.app/src/sum-vec/: .gitignore  LICENSE  Makefile  README.md
fred-server.app/: .cproject  .elinosproject  .gitignore  .project  ELINOS.sh  Makefile  README  README.md  configure
fred-server.app/src/: Makefile.elinos
fred-server.app/src/fred-linux/: Makefile.elinos
fred-server.app/src/fred-linux/hw_support/: gpio_probes.h
fred-speedtests/: petal.csv  pikeos.csv
fred-speedtests/petal/: mul128.reconf.txt  mul128.regular.txt  mul64.reconf.txt  mul64.regular.txt  sum_vec.reconf.txt  sum_vec.regular.txt  xor_vec.reconf.txt  xor_vec.regular.txt
fred-speedtests/pikeos/: mat128.reconf.txt  mat128.regular.txt  mat64.reconf.txt  mat64.regular.txt  sum_vec.reconf.txt  sum_vec.regular.txt  xor_vec.reconf.txt  xor_vec.regular.txt
rtdag-tests/: collect-averages.sh
rtdag-tests/cpu/: rtdag_1.yaml  rtdag_3.yaml  rtdag_5.yaml
rtdag-tests/cpu/test_3/: test_fpga_3.dot  test_fpga_3.lp  test_fpga_3.sol  test_fpga_3.yaml
rtdag-tests/cpu/test_5/: test_fpga_5.lp  test_fpga_5.sh  test_fpga_5.yaml
rtdag-tests/fpga/test_1/: test_fpga_1.dot  test_fpga_1.lp  test_fpga_1.sol  test_fpga_1.yaml
rtdag-tests/fpga/test_2/: test_fpga_2.dot  test_fpga_2.sol  test_fpga_2.yaml
rtdag-tests/fpga/test_3/: test_fpga_3.sol  test_fpga_3.yaml
rtdag-tests/fpga/test_4/: test_fpga_4.dot  test_fpga_4.sol
rtdag-tests/fpga/test_5/: test_fpga_5.sol  test_fpga_5.yaml
rtdag-tests/input/: test_fpga_5_input.yaml
rtdag-tests/last/: tf1r.yaml
rtdag-tests/last/pcc/: sys_json-ex4.dot  sys_json-ex4.json  sys_json-ex4.lp  sys_json-ex4.sol  sys_json-ex4.yaml  sys_json-ex4_input.yaml
rtdag-tests/last/test_1_reoptimized/: test_fpga_1_slack.dot  test_fpga_1_slack.lp  test_fpga_1_slack.sh  test_fpga_1_slack.sol  test_fpga_1_slack.yaml  test_fpga_1_slack_input.yaml
rtdag-tests/old/cpu/test_1/: test_fpga_1.dot  test_fpga_1.lp  test_fpga_1.sh  test_fpga_1.sol  test_fpga_1.yaml
rtdag-tests/old/cpu/test_3/: test_fpga_3.sh
rtdag-tests/old/cpu/test_5/: test_fpga_5.dot  test_fpga_5.sol
rtdag-tests/old/fpga/: rtdag_1.yaml  rtdag_1_slack.yaml  rtdag_2.yaml  rtdag_3.yaml  rtdag_4.yaml  rtdag_5.yaml
rtdag-tests/old/fpga/test_1/: test_fpga_1.sh
rtdag-tests/old/fpga/test_1_slack/: test_fpga_1_slack.dot  test_fpga_1_slack.lp  test_fpga_1_slack.sh  test_fpga_1_slack.sol  test_fpga_1_slack.yaml
rtdag-tests/old/fpga/test_2/: test_fpga_2.lp  test_fpga_2.sh
rtdag-tests/old/fpga/test_3/: test_fpga_3.dot  test_fpga_3.lp  test_fpga_3.sh
rtdag-tests/old/fpga/test_4/: test_fpga_4.lp  test_fpga_4.sh  test_fpga_4.yaml
rtdag-tests/old/fpga/test_5/: test_fpga_5.dot  test_fpga_5.lp  test_fpga_5.sh
rtdag-tests/old/input/: test_fpga_1_input.yaml  test_fpga_2_input.yaml  test_fpga_3_input.yaml  test_fpga_4_input.yaml
rtdag-tests/old/petal/: calib.sh
rtdag-tests/old/petal/cpu/: rtdag_1.out.0  rtdag_3.out.0  rtdag_5.out.0
rtdag-tests/old/petal/fpga/: rtdag_1.out.0  rtdag_1_slack.out.0  rtdag_2.out.0  rtdag_3.out.0  rtdag_4.out.0  rtdag_5.out.0
rtdag-tests/old/pikeos/cpu/: rtdag_1.out.0  rtdag_3.out.0  rtdag_5.out.0
rtdag-tests/old/pikeos/fpga/: rtdag_1.out.0  rtdag_2.out.0  rtdag_3.out.0  rtdag_4.out.0  rtdag_5.out.0
scripts/: convert-all.sh  dagc2rtdag.py  fred-init.sh  fred-speedtest.sh  rtdag-multitest.sh  rtdag-new.sh  rtdag-test.sh  rtdag.sh  test-fred.sh
uboot/: boot.scr
zcu102_hwvirt_linux.app/: .cproject  .elinosproject  .features  .gitignore  .project  Makefile  README  README.md  burn.sh  custom.boot  linux-modif.dtb  project.mkefs  system.dts
zcu102_hwvirt_linux.app/app.rootfs/usr/include/: fred_lib.h
zcu102_hwvirt_linux.app/app.rootfs/usr/lib/: libcpufreq.so.0
zcu102_hwvirt_linux.app/kernelsrc/: .config  .config.elinos
zcu102_hwvirt_linux.app/src/: Makefile.elinos  README
zcu102_hwvirt_linux.app/src/demo/: .gitignore  Makefile.elinos  hanoi  hanoi.c
zcu102_hwvirt_linux.app/src/etc/: profile
zcu102_hwvirt_linux.app/src/kernel-modules/: Makefile.elinos
zcu102_hwvirt_linux.app/src/kernel-modules/fred-linux-buffctl/: Makefile
zcu102_hwvirt_linux.app/src/kernel-modules/fred-linux-fpga-mgr-fmod/: .gitignore  Makefile  zynqmp-fpga-fmod.c  zynqmp-fpga-fmod.c.patch
zcu102_hwvirt_linux.app/src/lttng/: .gitignore  Makefile.elinos  lttng_uevents.c  uevents
zcu102_hwvirt_linux.app/src/lttng2/: .gitignore  Makefile.elinos  README  hello.c  lttng2-user-hello  ust_tests_hello.h
zcu102_hwvirt_linux.app/src/myprogs/: .gitignore  Makefile.elinos  hello.sh  hello_world.c  welcome_elinos.c
zcu102_hwvirt_linux.app/src/rsync/: .gitignore  Makefile.elinos
zcu102_hwvirt_pikeos.int/: .cproject  .gitignore  .project  Makefile  README  README.demo  README.md  partition_linux_part.report.xml  project.xml  uboot.dtb
